--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,17 @@
   <parent>
     <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
-    <version>1.554.1</version>
+    <version>2.33</version>
   </parent>
 
   <artifactId>reverse-proxy-auth-plugin</artifactId>
-  <version>1.5</version>
+  <version>1.5-SNAPSHOT</version>
   <packaging>hpi</packaging>
+    <properties>
+        <jenkins.version>2.7.3</jenkins.version>
+        <maven.compiler.source>1.7</maven.compiler.source>
+        <maven.compiler.target>1.7</maven.compiler.target>
+    </properties>
 
   <name>Jenkins Reverse Proxy Auth Plugin</name>
   <url>http://wiki.jenkins-ci.org/display/JENKINS/Reverse+Proxy+Auth+Plugin</url>
